<resources>
    <string name="app_name">SanoApp</string>
    <string name="main_activity_description">
Just chat with your mentors</string>

    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Chat cu un mentor</string>


    <string name="title_medicine_name">Nume medicament</string>
    <string name="hint_enter_med_name">Introduceti medicamentul</string>
    <string name="medicine_days">Zile medicament</string>
    <string name="title_treatment_deadline">Termenul limita medicament</string>
    <string name="title_continuous_use">Utilizare continua</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">TRATAMENT NOU</string>
    <string name="every_day">In fiecare zi</string>
    <string name="no_medicine_added">Fara medicamente adaugate</string>
    <string name="loading_tasks_error">Eroare la incarcarea alarmei</string>
    <string name="successfully_saved_me_message">Medicament adaugat cu succes</string>
    <string name="successfully_deleted_message">Medicament sters cu succes</string>
    <string name="reminder_message">Este timpul sa iei medicamnetul!</string>
    <string name="ignored">IGNORATE</string>
    <string name="taken">ADMINISTRATE</string>
    <string name="all">TOATE</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">Toate tratamentele</string>
    <string name="ignore_label">Medicament ignorate</string>
    <string name="taken_label">Tratamente administrate</string>
    <string name="no_history">Nu a fost gasit in istoric</string>
    <string name="no_taken_med_history">Nu ati luat niciun medicament</string>
    <string name="no_ignored_history">Nu exista vreun tratament ignorat</string>
    <string name="menu_stats">Raport lunar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ciprian_aelenei_ana_maria_diaconescu">Ciprian Aelenei</string>
    <string name="_2021">2022</string>
    <string name="v_1_0_7_6">v 1.0.7.6</string>
    <string name="ankp_messenger">SanoApp</string>
    <string name="setari">Setari</string>
    <string name="deconecteaza_te">Deconecteaza-te</string>
    <string name="despre">Despre</string>
    <string name="intra_in_cont">Intra in cont</string>
    <string name="introduceti_aderesa_de_e_mail">Introduceti aderesa de e-mail</string>
    <string name="introduceti_parola">Introduceti parola</string>
    <string name="conecteaza_te">Conecteaza-te</string>
    <string name="nu_esti_membru_inregistreaza_te">Nu esti membru? Inregistreaza-te!</string>
    <string name="scrie_mesajul_tau">Scrie mesajul tau...</string>
    <string name="textview">TextView</string>
    <string name="bine_ai_venit">Bine ai venit!</string>
    <string name="nume_utilizator">Nume Utilizator</string>
    <string name="profile">Profilul tau SanoApp</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Ați primit o notificare"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Trebuie să vă autentificați!</string>
    <string name="error_authentication_canceled">Autentificare anulata&#8230;</string>
    <string name="error_no_internet">Nici o conexiune la internet !</string>
    <string name="error_unknown_error">A apărut o eroare necunoscută&#8230;</string>
    <string name="connection_succeed">Autentificare reusita!</string>
    <string name="button_login_text_logged">Afiseaza profilul</string>
    <string name="button_login_text_not_logged">Conexiune</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Profilul tau</string>
    <string name="text_input_username">Nume utilizator</string>
    <string name="text_view_email">Adresa email :</string>
    <string name="button_update_account">Actualizați numele de utilizator</string>
    <string name="button_delete_account">Sterge contul meu</string>
    <string name="button_sign_out_account">Deconectare</string>
    <string name="info_no_email_found">Fără adresă de e-mail</string>
    <string name="info_no_username_found">Fără nume utilizator</string>
    <string name="popup_message_confirmation_delete_account">Sigur doriți să vă ștergeți contul?</string>
    <string name="popup_message_choice_yes">Da!</string>
    <string name="popup_message_choice_no">Nu!</string>
    <string name="check_box_is_mentor">Ești mentor?</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats </string>
    <string name="text_input_title_mentor_chat_activity">Scrieti mesajul dvs.</string>
    <string name="button_title_mentor_chat_activity">Trimite</string>
    <string name="text_view_mentor_chat_error">Nu exista mesaje&#8230;</string>
    <string name="popup_title_permission_files_access">Aceasta aplicatie are nevoie de permisiuni.</string>
    <string name="toast_title_no_image_chosen">Nicio imaigine selectata&#8230;</string>
    <!-- Book api -->
    <string name="thumbnail">thumbnail</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price">40 $</string>
    <string name="author">Author</string>


    <string name="search">Cauta</string>
    <string name="hint">Enter your query </string>
    <string name="description_image_view">Sablon pentru imagine</string>
    <string name="description_divider">Separator</string>
    <string name="Failed_to_Load_data">Verifica conexiunea la Internet</string>
    <string name="NO_RESULT">Nici un rezultat</string>

    <string-array name="fiche_type">
        <item>Consultatie</item>
        <item>Spitalizare</item>
    </string-array>

    <string-array name="specialite_spinner">
        <item>Stomatolog</item>
        <item>Medicina Generala</item>
        <item>ORL</item>
        <item>Oftalmolog</item>
        <item>Pediatru</item>
        <item>Radiolog</item>
        <item>Reumatolog</item>
        <item>Dermatolog</item>
        <item>Boli Interne</item>
        <item>Cardiolog</item>
    </string-array>

    <string-array name="blood_spinner">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
        -->
</resources>

