<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.ase.sanoapp.treatment.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_medicine_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edit_med_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_med_name" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ase.sanoapp.treatment.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_days"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/every_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">


                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_monday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="L" />


                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_tuesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="M" />

                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_wednesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Mi" />

                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_thursday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="J" />

                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_friday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="V" />


                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_saturday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />

                    <com.ase.sanoapp.treatment.views.DayViewCheckBox
                        android:id="@+id/dv_sunday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="D" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ase.sanoapp.treatment.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reminder"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.ase.sanoapp.treatment.views.RobotoBoldTextView
                        android:id="@+id/tv_medicine_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="4dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="#4d4d4d"
                        tools:text="23:30" />

                    <EditText
                        android:id="@+id/tv_dose_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="1.0" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_dose_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:entries="@array/medications_shape_array" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>